fixed some alignments

--- a/styles/header.css
+++ b/styles/header.css
@@ -33,7 +33,7 @@
   flex: 1;
   margin-left: 60px;
   margin-right: 29px;
-  max-width: 550px;
+  max-width: 470px;
   display: flex;
   align-items: center;
 }
